--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -42,3 +42,6 @@ button {
 .app-sidebar-note:hover {
     background-color: #d4d4d4;
 }
+.app-sidebar-note.active {
+    background-color: #d4d4d4;
+}
